Fix bug with checkbox and delete button getting squished

--- a/src/components/TodoList/TodoItem/TodoItem.css
+++ b/src/components/TodoList/TodoItem/TodoItem.css
@@ -39,6 +39,7 @@
 
 .to-do-check-box{
   width: 1.5rem;
+  min-width: 1.5rem;
   height: 1.5rem;
   cursor: pointer;
   color: black;
@@ -53,6 +54,7 @@
 
 .to-do-delete-button{
   width: 1.5rem;
+  min-width: 1.5rem;
   height: 1.5rem;
   cursor: pointer;
   font-size: 1rem;
